# urlwatch

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  COPYING  ChangeLog  Dockerfile  MANIFEST.in  README  README.md  TODO  cache.db  convert-to-python3.sh  hooks.py  makefile  pyproject.toml  requirements.txt  run.bat  run.sh  setup.py  update-manpages.sh  urls.txt  urls.yaml  urlwatch  urlwatch.1  urlwatch.yaml  watch.py
.github/: FUNDING.yml
.github/workflows/: unit-tests.yml
doc/source/: advanced.rst  conf.py  dependencies.rst  jobs.rst  migration.rst  reporters.rst
docs/source/: advanced.rst  conf.py  configuration.rst  dependencies.rst  deprecated.rst  filters.rst  index.rst  inheritance_ascii_tree.py  installation.rst  introduction.rst  jobs.rst  manpage.rst  migration.rst  reporters.rst
examples/: hooks.py.example  urls.txt.example
lib/urlwatch/: __init__.py  browser.py  cli.py  command.py  config.py  console.py  filters.py  handler.py  html2txt.py  ical2txt.py  jobs.py  mailer.py  main.py  migration.py  reporters.py  storage.py  util.py  worker.py  xmpp.py
lib/urlwatch/tests/: test_filter_documentation.py  test_filters.py  test_handler.py  test_pep8.py  test_reporters.py  test_worker.py
share/man/man1/: urlwatch.1
share/man/man5/: urlwatch-config.5  urlwatch-filters.5  urlwatch-jobs.5  urlwatch-reporters.5
share/man/man7/: urlwatch-cookbook.7  urlwatch-deprecated.7  urlwatch-intro.7
share/urlwatch/examples/: hooks.py.example  urls.txt.example  urls.yaml.example  urlwatch.yaml.example
test/: test_filter_documentation.py  test_filters.py  test_handler._generate_diff.py  test_handler.py  test_handler_generate_diff.py  test_reporters_diff_to_html.py  test_storage.py  test_util.py  util.py
test/data/: cache-old.db  filter_documentation_testdata.yaml  filter_tests.yaml  urls.json  urlwatch.json  urlwatch.yaml
urlwatch/: COPYING  urlwatch
(+13 files in other folders)
